# ocaml-cordova-plugin-inappbrowser

./: .travis-ci.sh  META  Makefile  Makefile.conf  README.md  cordova-plugin-inappbrowser.opam  cordova_in_app_browser.mli  dune-project
.github/workflows/: main.yml
opam/: opam
src/: cordova_in_app_browser.mli  dune
test/: test.ml
