(rule
 (targets cordova_in_app_browser.ml)
 (deps cordova_in_app_browser.mli)
 (action (run %{bin:gen_js_api} %{deps})))

(library
 (public_name cordova-plugin-inappbrowser)
 (name cordova_in_app_browser)
 (modes byte)
 (libraries gen_js_api js_of_ocaml js_of_ocaml-ppx)
 (preprocess (pps js_of_ocaml-ppx))
)
